--- a/personal-site/src/app/welcome-page/welcome-page.component.css
+++ b/personal-site/src/app/welcome-page/welcome-page.component.css
@@ -154,6 +154,10 @@ li.welcome-btn {
       height: 100%;
     }
 
+    .title-font-size {
+      letter-spacing: 20px;
+    }
+
     .welcome-menu,
     .welcome-linktree {
       width: 100%;
